# ds-free-api

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.en.md  README.md  config.example.toml  config.toml.example  justfile
.github/workflows/: ci.yml  release.yml
docs/: code-style.md  deepseek-api-reference.md  logging-spec.md
examples/: ds_core_cli-script.txt  ds_core_cli.rs  openai_adapter_cli-script.txt  openai_adapter_cli.rs
examples/openai_adapter_cli/: basic_chat.json  reasoning_search.json  stream_options.json  tool_call.json
py-e2e-tests/: config.toml  conftest.py  pyproject.toml  test_chat_completions.py
py-e2e-tests/anthropic_endpoint/: conftest.py  test_auth.py  test_messages.py  test_models.py  test_tools.py
py-e2e-tests/openai_endpoint/: conftest.py  test_auth.py  test_chat_completions.py  test_tools.py
src/: account_provisioning.rs  anthropic_compat.rs  config.rs  ds_core.rs  lib.rs  main.rs  openai_adapter.rs  server.rs
src/anthropic_compat/: models.rs  request.rs  response.rs
src/anthropic_compat/response/: aggregate.rs  stream.rs
src/ds_core/: accounts.rs  client.rs  completions.rs  pow.rs
src/openai_adapter/: models.rs  request.rs  response.rs  types.rs
src/openai_adapter/request/: normalize.rs  prompt.rs  resolver.rs  tools.rs
src/openai_adapter/response/: converter.rs  sse_parser.rs  state.rs  tool_parser.rs
src/server/: error.rs  handlers.rs  stream.rs
