[package]
name = "ai-free-api"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
base64 = "0.22.1"
bytes = "1"
futures = "0.3.32"
log = "0.4.29"
pin-project-lite = "0.2.17"
rand = "0.10.0"
reqwest = { version = "0.13.2", features = ["json", "stream", "multipart", "query"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.51.0", features = ["macros", "rt-multi-thread"] }
toml = "1.1.2"
wasmtime = { version = "43.0.0", features = ["cranelift"] }

[dev-dependencies]
env_logger = { version = "0.11.10", default-features = false, features = ["auto-color"] }
